sass/_universal.scss
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: 'mont', Arial, sans-serif;
    background-color: $grey;
    color: $white;
    font-size: 62.5%;
}

::-moz-selection { /* Code for Firefox */
    color: $pink;
  }
  
  ::selection {
    color: $pink;
  }
#page {
    overflow-x: hidden;
}
/* Site widths */
.site-width {
    max-width: $xx;
    margin: 0 auto;
    padding: 5rem 1.5rem;
}
@media screen and (min-width: $md) {
    .site-width {
        padding: 7.5rem 3rem;
    }
}
@media screen and (min-width: $lg) {
    .site-width {
        padding: 7.5rem 5rem;
    }
}
.site-width + .site-width {
    padding-top: 0;
}

/* Font import */
@font-face {
    font-family: mont;
    src: url(./assets/fonts/mont-regular.woff2), url(./assets/fonts/mont-regular.woff);
    font-weight: normal;
    font-display: swap;
}
@font-face {
    font-family: mont;
    src: url(./assets/fonts/mont-bold.woff2), url(./assets/fonts/mont-bold.woff);
    font-weight: bold;
    font-display: swap;
}
/* Colour bar */
.colour-bar {
    background-image: url(assets/imgs/colour-bar.jpg);
    background-size: cover;
    height: 4px;
}

/* Glass background */
.glass {
    background: $trans;
    backdrop-filter: blur(8px);
}
.glass-blur {
    filter: blur(8px);
}

/* Type styles */
a {
    color: $pink;
}
a:not(.rev-button):hover {
    font-weight: bold;
}

.current-menu-item a {
    color: $pink;
}

p, a, label, input, li, textarea {
    font-size: 1.6rem;
}
.small p,
.small a {
    font-size: 1.4rem;
}
h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
    line-height: 130%;
}
p, a {
    padding-bottom: 2rem;
}
h1 {
    font-size: 3.5rem;
    padding-bottom: 1.5rem;
}
h2 {
    font-size: 3rem;
    padding-bottom: 1rem;
}
h3 {
    font-size: 2.5rem;
        padding-bottom: 1.25rem;
}
h4 {
    font-size: 1.5rem;
    padding-bottom: .5rem;
}
h5 {
    font-size: 1.2rem;
    padding-bottom: .5rem;
}
h6 {
    font-size: 1rem;
    padding-bottom: .5rem;
}
@media screen and (min-width: $xs) {
    h1 {
        font-size: 5rem;
        padding-bottom: 2rem;
    }
    h2 {
        font-size: 3rem;
        padding-bottom: 1.5rem;
    }
    h4 {
        font-size: 1.76rem;
        padding-bottom: 1rem;
    }
    h5 {
        font-size: 1.5rem;
        padding-bottom: .5rem;
    }
    h6 {
        font-size: 1.2rem;
        padding-bottom: .5rem;
    }
}
@media screen and (min-width: $lg) {
    h1 {
        font-size: 6rem;
        padding-bottom: 2.5rem;
    }
    h2 {
        font-size: 4rem;
        padding-bottom: 2rem;
    }
    h3 {
        font-size: 3rem;
        padding-bottom: 1.5rem;
    }
    h4 {
        font-size: 2rem;
        padding-bottom: 1rem;
    }
    h5 {
        font-size: 1.5rem;
        padding-bottom: .5rem;
    }
    h6 {
        font-size: 1.2rem;
        padding-bottom: .5rem;
    }
}

/* Remove bottom padding if element is last child */
h1:last-child, h2:last-child, h3:last-child, h4:last-child, h5:last-child, h6:last-child, p:last-child, a:last-child:not(.rev-button) {
    padding-bottom: 0;
}

.grad-text {
    background: $grad;
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    padding: 0.2rem 0;
    width: fit-content;
}
li {
    list-style-type: none;
}
li a {
    text-decoration: none;
}

/* Custom bullet styles */
li.rev-bullet {
    display: list-item;
    list-style-type: disc;
    font-size: 1.5rem;
    margin-left: 16px;
}
li.rev-bullet span {
    font-size: 1.6rem;
    margin-left: 0rem;
    top: 0.1rem;
    position: relative;
}

/* Button Styles */
.rev-button {
    position: relative;
    background: $purple;
    color: $white;
    z-index: 1;
    padding: 1.2rem 2rem 1.1rem 2rem;
    border-radius: 50px;
    display: inline-block;
    transition: background 150ms ease;
    width: fit-content;
    font-weight: bold;
    text-decoration: none;
    cursor: pointer;
}
.rev-button::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(220deg, $pink, transparent);
    z-index: -1;
    border-radius: 50px;
}
.rev-button:hover {
    background: $pink;
}

/* Card Styles */
.rev-card {
    background-color: $white;
    border-radius: $rev-radius;
    box-shadow: 0 0 2rem $shadow;
    h1, h2, h3, h4, h5, h6, p, label, li {
        color: $grey;
    }
}
.rev-padding {
    padding: 3rem;
}
@media screen and (min-width: $sm) {
    .rev-padding {
        padding: 5rem;
    }
}

/* Form Styles */
.hf-form .hf-fields-wrap {
    display: grid;
    grid-template-columns: 1fr;
    gap: 2.5rem 2rem;
    .field {
        grid-column: 1 / 3;
    }
    @media screen and (min-width: $xx) {
        .field {
            grid-column: auto;
        }
    }
    .rev-button input {
        outline: none !important;
        border: none !important;
    }
}
input, select, textarea {
    display: block;
    font-family: 'Mont', Arial, Helvetica, sans-serif;
}
textarea {
    border-radius: $rev-radius $rev-radius 0 $rev-radius !important;
}
input, textarea {
    resize: vertical;
    outline: .1rem solid $grey !important;
    border: .1rem solid $grey !important;
    transition: outline 150ms ease, border 150ms ease;
}
input:focus, textarea:focus, select:focus {
    border: .1rem solid $pink !important;
    outline: .1rem solid $pink !important;
}
label {
    margin-bottom: .5rem;
}
.hf-form input:not(.rev-button), .hf-form textarea {
    border-radius: $rev-radius;
    border: .2rem solid $grey;
    padding: 1.5rem 2rem;
    margin-top: 1rem;
    width: 100%;
}
.hf-form {
    .rev-button {
        padding: 0;
        width: 100%;
        grid-column: 1 / 3;
        input {
            cursor: pointer;
            padding: 1.2rem 2rem 1.1rem 2rem;
            background-color: transparent;
            color: $white;
            margin-top: 0;
        }
    }
}
select {
    border-radius: $rev-radius;
    border: .2rem solid $grey;
    padding: 1.7rem 2rem 1.5rem;
    margin-top: 1rem;
    width: 100%;
    font-weight: bold;
    appearance: none;
    cursor: pointer;
    font-size: 1.6rem;
    border: 0.1rem solid transparent;
    outline: 0.1rem solid transparent;
}
@media screen and (min-width: $xx) {
    .hf-form .hf-fields-wrap {
        grid-template-columns: 1fr 1fr;
    }
    .hf-fields-wrap .text-area.field {
        grid-column: 1 / 3;
    }
}

/* Layout styles */
.flex-wrap {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    h1, h3, h4, h5, h6, p, label, input, textarea {
        padding-bottom: 0;
    }
    .rev-button {
        margin-top: 0;
    }
}
@media screen and (max-width: $sm) {
    .flex-wrap {
        flex-direction: column;
        align-items: start;
        margin-bottom: 2rem;
        .rev-button {
            margin-top: 2rem;
        }
    }
}

/* Blobs and grids */
.rev-decore {
    position: absolute;
    z-index: -1 !important;
    opacity: 75%;
}

